build the framework of the website

--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-Hello World
+<!DOCTYPE HTML>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Star formation</title>
+        <link rel="stylesheet" type="text/css" href="css/style.css">
+    </head>
+    <body>
+        <div id="header">
+            <h1>Star Formation Group</h1>
+            <h2>School of Astronomy and Space Science, Nanjing University</h2>
+        </div>
+
+        <div id="route">
+            
+        </div>
+
+        <div class="clearfix">
+        <div class="column nav">
+            <ul>
+                <li><a href="index.html">The Group</a></li>
+                <li><a href="members.html">Members</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="publications.html">Publications</a></li>
+                <li><a href="internal.html">Internal</a></li>
+            </ul>
+        </div>
+
+        <div class="column content">
+            <p>A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. </p>
+
+            <p>A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields.</p> 
+
+            <p>A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. </p>
+
+            <p>A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. </p>
+
+
+        </div>
+        </div>
+
+        <div id="foot">
+            <p id="contact">
+            Contact: 
+            Prof. QIU, keping
+            kpqiu[at]nju.edu.cn
+            </p>
+            <p id="copyright">© 2018 NJUSFG</p>
+
+        </div>
+    </body>
+</html>
