--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Star formation</title>
+        <title>Star formation Group</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
@@ -12,7 +12,7 @@
         </div>
 
         <div id="route">
-            
+            <a href="index.html">Home</a> > <a href="index.html">The Group</a>
         </div>
 
         <div class="clearfix">
@@ -39,7 +39,7 @@
         </div>
         </div>
 
-        <div id="foot">
+        <footer>
             <p id="contact">
             Contact: 
             Prof. QIU, keping
@@ -47,6 +47,6 @@
             </p>
             <p id="copyright">© 2018 NJUSFG</p>
 
-        </div>
+        </footer>
     </body>
 </html>
