--- a/members.html
+++ b/members.html
@@ -30,39 +30,47 @@
             <h2 class="pinboard_title">Faculty</h2>
             <hr>
             <div class="pinboard">
-            <div class="namecard">
-                <p class="profile"><img src="img/js.jpg" alt="QIU" class="portraits">QIU, Keping<br>Professor</p>
-            </div>
+
+                <div class="namecard">
+                    <p class="profile"><img src="img/js.jpg" alt="QIU" class="portraits">QIU, Keping<br>Professor</p>
+                </div>
+
             </div>
 
 
             <h2 class="pinboard_title">Post-doc</h2>
             <hr>
             <div class="pinboard">
-            <div class="namecard">
-                <p class="profile"><img src="img/js.jpg" alt="HU" class="portraits">HU, Bo<br>FAST fellow</p>
-            </div>
-            <div class="namecard">
-                <p class="profile"><img src="img/js.jpg" alt="James Bond" class="portraits">James Bond<br>Postdoc</p>
-            </div>
+
+                <a href="persons/hubo">
+                <div class="namecard">
+                    <p class="profile"><img src="img/js.jpg" alt="HU" class="portraits">HU, Bo<br>FAST fellow</p>
+                </div>
+                </a>
+
             </div>
 
 
             <h2 class="pinboard_title">Students</h2>
             <hr>
             <div class="pinboard">
-            <div class="namecard">
-                <p class="profile"><img src="img/js.jpg" alt="CAO" class="portraits">CAO, Yue<br>PhD candidate</p>
-            </div>
-            <div class="namecard">
-                <p class="profile"><img src="img/js.jpg" alt="LIU" class="portraits">LIU, Junhao<br>PhD candidate</p>
-            </div>
-            <div class="namecard">
-                <p class="profile"><img src="img/js.jpg" alt="WANG" class="portraits">WANG, Yuwei<br>PhD candidate</p>
-            </div>
-            <div class="namecard">
-                <p class="profile"><img src="img/js.jpg" alt="ZHANG" class="portraits">ZHANG, Xu<br>PhD candidate</p>
-            </div>
+
+                <div class="namecard">
+                    <p class="profile"><img src="img/js.jpg" alt="CAO" class="portraits">CAO, Yue<br>PhD candidate</p>
+                </div>
+
+                <div class="namecard">
+                    <p class="profile"><img src="img/js.jpg" alt="LIU" class="portraits">LIU, Junhao<br>PhD candidate</p>
+                </div>
+
+                <div class="namecard">
+                    <p class="profile"><img src="img/js.jpg" alt="WANG" class="portraits">WANG, Yuwei<br>PhD candidate</p>
+                </div>
+
+                <div class="namecard">
+                    <p class="profile"><img src="img/js.jpg" alt="ZHANG" class="portraits">ZHANG, Xu<br>PhD candidate</p>
+                </div>
+
             </div>
         </div>
         </div>
