--- a/persons/hubo/index.html
+++ b/persons/hubo/index.html
@@ -2,51 +2,10 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Star formation Group</title>
+        <title>Hu Bo</title>
         <link rel="stylesheet" type="text/css" href="css/style.css">
     </head>
     <body>
-        <div id="header">
-            <h1>Star Formation Group</h1>
-            <h2>School of Astronomy and Space Science, Nanjing University</h2>
-        </div>
-
-        <div id="route">
-            <a href="index.html">Home</a> > <a href="index.html">The Group</a>
-        </div>
-
-        <div class="clearfix">
-        <div class="column nav">
-            <ul>
-                <li><a href="index.html">The Group</a></li>
-                <li><a href="members.html">Members</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="publications.html">Publications</a></li>
-                <li><a href="internal.html">Internal</a></li>
-            </ul>
-        </div>
-
-        <div class="column content">
-            <p>A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. </p>
-
-            <p>A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields.</p> 
-
-            <p>A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. </p>
-
-            <p>A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. A few paragraph introducing our group and our main research fields. </p>
-
-
-        </div>
-        </div>
-
-        <footer>
-            <p id="contact">
-            Contact: 
-            Prof. QIU, keping
-            kpqiu[at]nju.edu.cn
-            </p>
-            <p id="copyright">© 2018 NJUSFG</p>
-
-        </footer>
+        <h1>Personal page of Dr. Bo HU</h1>
     </body>
 </html>
