--- a/index.html
+++ b/index.html
@@ -12,13 +12,12 @@
         </div>
 
         <div id="route">
-            <a href="index.html">Home</a> > <a href="index.html">The Group</a>
+            <a href="index.html">Home</a>
         </div>
 
         <div class="clearfix">
         <div class="column nav">
             <ul>
-                <li><a href="index.html">The Group</a></li>
                 <li><a href="members.html">Members</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="publications.html">Publications</a></li>
