--- a/index.html
+++ b/index.html
@@ -7,21 +7,28 @@
     </head>
     <body>
         <div id="header">
-            <h1>Star Formation Group</h1>
-            <h2>School of Astronomy and Space Science, Nanjing University</h2>
+            <a href="index.html">
+                <h1>Star Formation Group</h1>
+            </a>
+            
+            <a href="http://astronomy.nju.edu.cn/">
+                <h2>School of Astronomy and Space Science, Nanjing University</h2>
+            </a>
         </div>
 
+        <hr>
+
         <div id="route">
-            <a href="index.html">Home</a>
+            <a href="index.html">Home</a> > <a href="members.html">Members</a>
         </div>
 
         <div class="clearfix">
         <div class="column nav">
-            <ul>
-                <li><a href="members.html">Members</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="publications.html">Publications</a></li>
-                <li><a href="internal.html">Internal</a></li>
+            <ul class="navul">
+                <a href="members.html"><li class="navli">Members</li></a>
+                <a href="projects.html"><li class="navli">Projects</li></a>
+                <a href="publications.html"><li class="navli">Publications</li></a>
+                <a href="internal.html"><li class="navli">Internal</li></a>
             </ul>
         </div>
 
