--- a/members.html
+++ b/members.html
@@ -7,9 +7,16 @@
     </head>
     <body>
         <div id="header">
-            <h1>Star Formation Group</h1>
-            <h2>School of Astronomy and Space Science, Nanjing University</h2>
+            <a href="index.html">
+                <h1>Star Formation Group</h1>
+            </a>
+            
+            <a href="http://astronomy.nju.edu.cn/">
+                <h2>School of Astronomy and Space Science, Nanjing University</h2>
+            </a>
         </div>
+
+        <hr>
 
         <div id="route">
             <a href="index.html">Home</a> > <a href="members.html">Members</a>
@@ -17,62 +24,86 @@
 
         <div class="clearfix">
         <div class="column nav">
-            <ul>
-                <li><a href="members.html">Members</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="publications.html">Publications</a></li>
-                <li><a href="internal.html">Internal</a></li>
+            <ul class="navul">
+                <a href="members.html"><li class="navli">Members</li></a>
+                <a href="projects.html"><li class="navli">Projects</li></a>
+                <a href="publications.html"><li class="navli">Publications</li></a>
+                <a href="internal.html"><li class="navli">Internal</li></a>
             </ul>
         </div>
 
         <div class="column content">
             <h2 class="pinboard_title">Faculty</h2>
-            <hr>
+            <!--<hr>-->
             <div class="pinboard">
 
-                <div class="namecard">
-                    <p class="profile"><img src="img/js.jpg" alt="QIU" class="portraits">QIU, Keping<br>Professor</p>
-                </div>
+                <a href="person/qiukeping/index.html">
+                    <div class="namecard">
+                        <img src="img/js.jpg" alt="QIU" class="portraits">QIU, Keping<br>Professor
+                    </div>
+                </a>
 
             </div>
 
 
             <h2 class="pinboard_title">Post-doc</h2>
-            <hr>
+            <!--<hr>-->
             <div class="pinboard">
 
-                <a href="persons/hubo">
-                <div class="namecard">
-                    <p class="profile"><img src="img/js.jpg" alt="HU" class="portraits">HU, Bo<br>FAST fellow</p>
-                </div>
+                <a href="person/hubo/index.html">
+                    <div class="namecard">
+                        <img src="img/js.jpg" alt="HU" class="portraits">HU, Bo<br>FAST fellow
+                    </div>
                 </a>
 
             </div>
 
 
             <h2 class="pinboard_title">Students</h2>
-            <hr>
+            <!--<hr>-->
             <div class="pinboard">
 
                 <!-- C -->
-                <div class="namecard">
-                    <p class="profile"><img src="img/js.jpg" alt="CAO" class="portraits">CAO, Yue<br>PhD candidate</p>
-                </div>
+                <a href="person/caoyue/index.html">
+                    <div class="namecard">
+                        <img src="img/js.jpg" alt="CAO" class="portraits">CAO, Yue<br>PhD candidate
+                    </div>
+                </a>
 
                 <!-- L -->
-                <div class="namecard">
-                    <p class="profile"><img src="img/js.jpg" alt="LIU" class="portraits">LIU, Junhao<br>PhD candidate</p>
-                </div>
+                <a href="person/liyingxi/index.html">
+                    <div class="namecard">
+                        <img src="img/js.jpg" alt="LI" class="portraits">LI, Yingxi<br>Graduate
+                    </div>
+                </a>
+                <a href="person/liujunhao/index.html">
+                    <div class="namecard">
+                        <img src="img/js.jpg" alt="LIU" class="portraits">LIU, Junhao<br>PhD candidate
+                    </div>
+                </a>
 
                 <!-- W -->
-                <div class="namecard">
-                    <p class="profile"><img src="img/js.jpg" alt="WANG" class="portraits">WANG, Yuwei<br>PhD candidate</p>
-                </div>
+                <a href="person/wangyuwei/index.html">
+                    <div class="namecard">
+                        <img src="img/js.jpg" alt="WANG" class="portraits">WANG, Yuwei<br>PhD candidate
+                    </div>
+                </a>
+
+                <!-- X -->
+                <a href="person/xingyuchen/index.html">
+                    <div class="namecard">
+                        <img src="img/js.jpg" alt="XING" class="portraits">XING, Yuchen<br>Graduate
+                    </div>
+                </a>
 
                 <!-- Z -->
-                <div class="namecard">
-                    <p class="profile"><img src="img/js.jpg" alt="ZHANG" class="portraits">ZHANG, Xu<br>PhD candidate</p>
-                </div>
+                <a href="person/zhangxu/index.html">
+                    <div class="namecard">
+                        <img src="img/js.jpg" alt="ZHANG" class="portraits">ZHANG, Xu<br>Graduate
+                    </div>
+                </a>
+
+
 
             </div>
         </div>
