--- a/projects.html
+++ b/projects.html
@@ -7,9 +7,16 @@
     </head>
     <body>
         <div id="header">
-            <h1>Star Formation Group</h1>
-            <h2>School of Astronomy and Space Science, Nanjing University</h2>
+            <a href="index.html">
+                <h1>Star Formation Group</h1>
+            </a>
+            
+            <a href="http://astronomy.nju.edu.cn/">
+                <h2>School of Astronomy and Space Science, Nanjing University</h2>
+            </a>
         </div>
+
+        <hr>
 
         <div id="route">
             <a href="index.html">Home</a> > <a href="members.html">Members</a>
@@ -17,17 +24,17 @@
 
         <div class="clearfix">
         <div class="column nav">
-            <ul>
-                <li><a href="members.html">Members</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="publications.html">Publications</a></li>
-                <li><a href="internal.html">Internal</a></li>
+            <ul class="navul">
+                <a href="members.html"><li class="navli">Members</li></a>
+                <a href="projects.html"><li class="navli">Projects</li></a>
+                <a href="publications.html"><li class="navli">Publications</li></a>
+                <a href="internal.html"><li class="navli">Internal</li></a>
             </ul>
         </div>
 
         <div class="column content">
             <div class="project">
-                <h2 class="section_title"><a href="https://census.project">CENSUS</a></h2>
+                <a href="https://census.project"><h2 class="section_title">CENSUS</h2></a>
                 <!-- <hr> -->
 
                 <img src="img/projects/census.jpg" alt="CENSUS" class="project_banner">
@@ -35,7 +42,7 @@
             </div>
 
             <div class="project">
-                <h2 class="section_title"><a href="https://hifast.project">HIFAST</a></h2>
+                <a href="https://hifast.project"><h2 class="section_title">HIFAST</h2></a>
                 <!-- <hr> -->
 
                 <img src="img/projects/hifast.jpg" alt="HIFAST" class="project_banner">
