--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <div class="clearfix">
         <div class="column nav">
             <ul class="navul">
-                <a href="members.html"><li class="navli">Members</li></a>
-                <a href="projects.html"><li class="navli">Projects</li></a>
-                <a href="publications.html"><li class="navli">Publications</li></a>
-                <a href="internal.html"><li class="navli">Internal</li></a>
+                <a href="members.html"><li class="navli primebutton">Members</li></a>
+                <a href="projects.html"><li class="navli primebutton">Projects</li></a>
+                <a href="publications.html"><li class="navli primebutton">Publications</li></a>
+                <a href="internal.html"><li class="navli primebutton">Internal</li></a>
             </ul>
         </div>
 
