--- a/projects.html
+++ b/projects.html
@@ -19,7 +19,7 @@
         <hr>
 
         <div id="route">
-            <a href="index.html">Home</a> > <a href="members.html">Members</a>
+            <a href="index.html">Home</a> > <a href="projects.html">Projects</a>
         </div>
 
         <div class="clearfix">
@@ -64,7 +64,7 @@
             Prof. QIU, keping
             kpqiu[at]nju.edu.cn
             </p>
-            <p id="copyright">© 2018 NJUSFG</p>
+            <p id="copyright">© 2019 NJUSFG</p>
 
         </footer>
     </body>
